[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ssd"
version = "0.2.0"
authors = [{ name = "Tanishq Kumar" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "Async tree-based speculative decoding research engine"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.8,<3",
    "triton>=3.4,<4",
    "transformers==4.57.1",
    "xxhash==3.5.0",
    "numpy>=2.1,<3",
    "safetensors>=0.6,<1",
    "tqdm==4.67.1",
    "flashinfer-python>=0.5,<1",
    # sgl-kernel's flash_attn fork isn't required — we call upstream `flash_attn`
    # directly (both paths now use `block_table` kwarg). Keep the dep only if you
    # need other sgl-kernel ops; remove if building a minimal install.
    "flash-attn>=2.7,<3",
    "nvidia-cutlass-dsl>=4.2",
    "wandb>=0.22",
    "hf_transfer",
    "tiktoken",
]

[project.optional-dependencies]
scripts = [
    "datasets",
    "huggingface_hub",
]
server = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
]

[project.urls]
Homepage="https://github.com/tanishqkumar/ssd"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssd*"]
